--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0"
   }
