--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SafiPay allows remote workers to get payed in remote countries",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node app.js"
   },
   "repository": {
     "type": "git",
